syntax = "proto3";
package pb;
option go_package = "./;pb";

message PBPlayerData {
    optional PBCommonData CommonData = 1;          // 公共数据
}

message PBCommonData {
    int64 UserUniID = 1;       // 用户ID
    string NickName = 2;       // 昵称
    string HeadImage = 3;      // 头像
    uint32 RegisterTime = 4;   // 注册时间
    int32 PlayerLevel = 5;     // 等级
    int32 GoldCoin = 6;        // 金币
    int32 Diamond = 7;         // 钻石
    int32 Strength = 8;        // 体力
    int32 Experience = 9;      // 经验
}

// 玩家登录请求
message PlayerLoginRequest {
    string LoginType = 1;      // 登录类型(quick)
    string Account = 2;        // 用户名
    string PassWord = 3;       // 密码
    string ChannelType = 4;    // 渠道标识
}

// 玩家登录回应
message PlayerLoginResponse {
    int32 Result = 1;              // 错误码
    PlayerLoginRequest ReqData = 2;// 请求数据
    int64 UserUniID = 3;           // 用户ID
    string Account = 4;            // 账号
    string Password = 5;           // 密码
    uint32 Register = 6;           // 是否新玩家
    uint32 RegisterTime = 7;       // 注册时间
    uint32 RandomSeed = 8;         // 随机种子
}

// 心跳请求
message HeartbeatRequest {
}

// 心跳响应
message HeartbeatResponse {
    uint32 ServerTime = 1;         // 服务器时间（时间戳，秒）
}

message BroadcastRequest {
    string Str = 1;
}
message BroadcastResponse {
    uint32 Result = 1;
    string Str = 2;
}

message ServerErrNotify {
    uint32 ErrCode = 1;
    string ErrMsg = 2;
}
